--- a/src/main/resources/templates/sharePostUpdate.html
+++ b/src/main/resources/templates/sharePostUpdate.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 <h1>게시글 수정</h1>
-<form th:action="@{/share/{id}/update(id=${post.txnPostId})}" method="post">
+<form th:action="@{/share/{id}/update(id=${post.txnPostId})}" method="post" enctype="multipart/form-data">
     <label>제목: <input type="text" name="txnBoardTitle" th:value="${post.txnBoardTitle}" required></label><br>
     <label>내용: <textarea name="txnBoardContent" required th:text="${post.txnBoardContent}"></textarea></label><br>
-    <label>가격: <input type="number" name="price" th:value="${post.price}" required></label><br>
-    <label>위치: <input type="text" name="location" th:value="${post.location}" required></label><br>
-    <label>사진 URL: <input type="text" name="photoUrl" th:value="${post.photoUrl}"></label><br>
-    <button type="submit">수정하기</button>
+    <label>사진: <input type="file" name="photo" accept="image/*"></label><br>
+    <label>금액: <input type="number" name="price" th:value="${post.price}" required></label><br>
+    <label>지역: <input type="text" name="location" th:value="${post.location}" required></label><br>
+    <button type="submit">수정</button>
 </form>
 <a href="/share/list">목록으로</a>
 </body>
