--- a/src/main/resources/templates/sharePostUpdate.html
+++ b/src/main/resources/templates/sharePostUpdate.html
@@ -6,14 +6,27 @@
 </head>
 <body>
 <h1>게시글 수정</h1>
+
 <form th:action="@{/share/{id}/update(id=${post.txnPostId})}" method="post" enctype="multipart/form-data">
-    <label>제목: <input type="text" name="txnBoardTitle" th:value="${post.txnBoardTitle}" required></label><br>
-    <label>내용: <textarea name="txnBoardContent" required th:text="${post.txnBoardContent}"></textarea></label><br>
-    <label>사진: <input type="file" name="photo" accept="image/*"></label><br>
-    <label>금액: <input type="number" name="price" th:value="${post.price}" required></label><br>
-    <label>지역: <input type="text" name="location" th:value="${post.location}" required></label><br>
+    <label for="title">제목:</label>
+    <input type="text" id="title" name="txnBoardTitle" th:value="${post.txnBoardTitle}" required><br>
+
+    <label for="content">내용:</label>
+    <textarea id="content" name="txnBoardContent" required th:text="${post.txnBoardContent}"></textarea><br>
+
+    <label for="photo">사진:</label>
+    <input type="file" id="photo" name="photo"><br>
+    <img th:if="${post.photoUrl != null}" th:src="${post.photoUrl}" alt="이미지 미리보기" width="200"><br>
+
+    <label for="price">금액:</label>
+    <input type="number" id="price" name="price" step="0.01" th:value="${post.price}" required><br>
+
+    <label for="location">지역:</label>
+    <input type="text" id="location" name="location" th:value="${post.location}" required><br>
+
     <button type="submit">수정</button>
 </form>
-<a href="/share/list">목록으로</a>
+
+<a th:href="@{/share/list}">목록으로</a>
 </body>
 </html>
